Fixed login screen not being centered on mobile devices

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,5 +1,5 @@
-<div class="mx-auto" style="width: 200px;padding-top: 10px">
-    <div class="card p-3" style="width: 18rem;">
+<div class="pt-4" style="text-align: center;">
+    <div class="card p-3" style="display: inline-block;">
         <h3 class="card-title text-center">Login</h3>
         <div class="card-text">
             <form [formGroup]="loginForm" (ngSubmit)="login()">
