Prefetching bound checking is now working. Just layout shift and scrolling too fast left

--- a/src/app/manga-reader/infinite-scroller/infinite-scroller.component.html
+++ b/src/app/manga-reader/infinite-scroller/infinite-scroller.component.html
@@ -6,7 +6,9 @@
 </div>
 
 <!-- TODO: We can splice the data so that we only render pageNum +- 5 (aka 11 images at a time)-->
-<ng-container *ngFor="let item of webtoonImages | async; let index = index;">
-    <h2>Page {{item.page}}</h2>
-    <img src="{{item.src}}" class="{{pageNum === item.page ? 'active': ''}}" rel="nofollow" alt="image" (load)="onImageLoad($event)" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
-</ng-container>
+<div class="{{allImagesLoaded ? '' : ''}}">
+    <ng-container *ngFor="let item of webtoonImages | async; let index = index;">
+        <h2>Page {{item.page}}</h2>
+        <img src="{{item.src}}" class="{{pageNum === item.page ? 'active': ''}}" rel="nofollow" alt="image" (load)="onImageLoad($event)" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
+    </ng-container>
+</div>
