--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-header></app-nav-header>
-<div [ngStyle]="(navService?.navbarVisible$ | async) ? {'margin-top': '56px'} : {}">
+<div [ngStyle]="(navService?.navbarVisible$ | async) ? {'padding-top': 'calc(56px + 5px)', 'height': '100%'} : {}">
     <a id="content"></a>
     <router-outlet></router-outlet>
 </div>
