--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
-// Import colors for overrides of bootstrap theme
-@import './theme/colors';
-
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap/scss/mixins/_breakpoints.scss';
 
-@import '~ngx-toastr/toastr-bs4-alert';
+//@import '~ngx-toastr/toastr-bs4-alert';
 @import '~swiper/swiper.scss';
+
+// Import colors for overrides of bootstrap theme
+@import './theme/_colors.scss';
+@import './theme/_toastr.scss';
 
 // Custom animation for ng-lazyload-image
 img.ng-lazyloaded {
