--- a/src/app/manga-reader/infinite-scroller/infinite-scroller.component.html
+++ b/src/app/manga-reader/infinite-scroller/infinite-scroller.component.html
@@ -1,12 +1,15 @@
 
 <div class="fixed-top overlay" *ngIf="debug">
-    Is Scrolling: {{isScrollingForwards() ? 'Forwards' : 'Backwards'}} {{this.isScrolling}}
-    All Images Loaded: {{this.allImagesLoaded}}
-    Prefetched {{minPrefetchedWebtoonImage}}-{{maxPrefetchedWebtoonImage}}. Current Page: {{pageNum}}. Width: {{webtoonImageWidth}}
+    <strong>Captures Scroll Events:</strong> {{!this.isScrolling && this.allImagesLoaded}}
+    <strong>Is Scrolling:</strong> {{isScrollingForwards() ? 'Forwards' : 'Backwards'}} {{this.isScrolling}}
+    <strong>All Images Loaded:</strong> {{this.allImagesLoaded}}
+    <strong>Prefetched</strong> {{minPrefetchedWebtoonImage}}-{{maxPrefetchedWebtoonImage}} 
+    <strong>Current Page:</strong>{{pageNum}}
+    <strong>Width:</strong> {{webtoonImageWidth}}
 </div>
 
-<div class="">
-    <ng-container *ngFor="let item of webtoonImages | async; let index = index;">
-        <img src="{{item.src}}" style="display: block" class="mx-auto {{pageNum === item.page && debug ? 'active': ''}}" rel="nofollow" alt="image" (load)="onImageLoad($event)" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
-    </ng-container>
-</div>
+
+<ng-container *ngFor="let item of webtoonImages | async; let index = index;">
+    <img src="{{item.src}}" style="display: block" class="mx-auto {{pageNum === item.page && debug ? 'active': ''}}" rel="nofollow" alt="image" (load)="onImageLoad($event)" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
+</ng-container>
+
